# GZHU-OS-CHATROOM-WEB

./: .gitignore  PROJECT_STRUCTURE.md  README.md
BACKEND/: .gitignore  CMakeLists.txt  main.cpp
BACKEND/config/: sensitive_words.txt
BACKEND/include/core/: websocket_manager.h
BACKEND/include/database/: database_manager.h
BACKEND/include/handlers/: websocket_handler.h
BACKEND/include/models/: message.h  user.h
BACKEND/include/services/: auth_service.h  chat_service.h  message_filter.h
BACKEND/include/utils/: json_utils.h  time_utils.h
BACKEND/src/: auth.cpp  auth.h  content_filter.cpp  content_filter.h  database.cpp  database.h  main.cpp  websocket_manager.cpp
BACKEND/src/core/: auth.cpp  database.cpp  websocket_manager.cpp
BACKEND/src/database/: database_manager.cpp
BACKEND/src/handlers/: websocket_handler.cpp
BACKEND/src/models/: message.cpp  user.cpp
BACKEND/src/services/: auth_service.cpp  chat_service.cpp  message_filter.cpp
BACKEND/src/utils/: content_filter.cpp  json_utils.cpp  time_utils.cpp
FRONTEND/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
FRONTEND/src/: App.vue  main.ts  style.css
FRONTEND/src/assets/: main.css
FRONTEND/src/components/: MessageBubble.vue
FRONTEND/src/router/: index.ts
FRONTEND/src/services/: api.ts  websocket.ts
FRONTEND/src/stores/: auth.ts  chat.ts  counter.ts  useChat.ts  useUser.ts
FRONTEND/src/types/: index.ts
FRONTEND/src/views/: ChatView.vue  LoginView.vue  ProfileView.vue  RegisterView.vue  SettingsView.vue
